# pyhardisp

./: .gitignore  .gitlab-ci.yml  CONVERSION_SUMMARY.md  Dockerfile  HARDISP_UPDATE_NOTES.md  INDEX.md  LICENCE  LICENSE_IERS.txt  MANIFEST.in  README.md  README_PYTHON_CONVERSION.md  ocean_loading_nm_s2.csv  pyproject.toml  setup.py
.github/workflows/: build.yml  python-package.yml  tests.yml
examples/: run_hardisp.py  run_hardisp_load_blq_coeffs_from_file.py
pyhardisp/: __init__.py  core.py
src/: makefile.txt  readme
tests/: __init__.py  tests.py
